src/test/resources/errors/array-object.intp
val x = true
val y = x[0]